--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -18,8 +18,28 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		</init-param>
 		
 	</servlet>
+	
+	<servlet>
+		<servlet-name>Controllers</servlet-name>
+		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+		<!-- Register resources and providers under com.vogella.jersey.first package. -->
+		<init-param>
+			<param-name>jersey.config.server.provider.packages</param-name>
+			<param-value>com.FCI.SWE.Controller</param-value>
+		</init-param>
+		<init-param>
+			<param-name>jersey.config.server.provider.classnames</param-name>
+			<param-value>org.glassfish.jersey.server.mvc.jsp.JspMvcFeature</param-value>
+		</init-param>
+		
+	</servlet>
+	
+	
 	<servlet-mapping>
 		<servlet-name>Jersey REST Service</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
+		
+		<servlet-name>Controllers</servlet-name>
+		<url-pattern>/social/*</url-pattern>
 	</servlet-mapping>
 </web-app>
