--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -38,8 +38,13 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	<servlet-mapping>
 		<servlet-name>Jersey REST Service</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
-		
-		<servlet-name>Controllers</servlet-name>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+	    
+	    <servlet-name>Controllers</servlet-name>
 		<url-pattern>/social/*</url-pattern>
+	    
+	    
 	</servlet-mapping>
 </web-app>
