--- a/war/WEB-INF/classes/.gitignore
+++ b/war/WEB-INF/classes/.gitignore
@@ -1,11 +1,2 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
+/.gitignore
 /com/
-=======
-/META-INF/
-/com/
-/log4j.properties
->>>>>>> 1f0f9e3d584ce3c9e0d204c0766d9d04e6228401
-=======
-/com/
->>>>>>> master
